# cali

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _example_queries.py  _get_rois_by_detection_settings.py  _query_examples.py  check_db.py  check_meta.py  debug_example.py  example.py  example1.py  example2.py  example4.py  model_test.py  pyproject.toml  run_from_database.ipynb  test.py  test_1.py  w.py  x.py  y.py  z.ipynb  z.py
.github/workflows/: ci.yml
_dev/: _analysis_with_sqlmodel.py  _cali_gui_old.py  _check_analysis_result_links.py  _get_rois_by_detection_settings.py  _query_examples.py  _verify_analysis_result_fix.py  api_comparison.py  example.py  example1.py  example2.py  example3.py  example4.py  example_unified_runner.py  p.py  t.py  table.py  test_burst_plots.py  test_force.py  todo.md  wip_batch_analysis.py  x.py  y.py  z.py
_dev/_old/_plate_viewer/: _analysis_gui.py  _analysis_with_sqlmodel.py  _plate_viewer.py  _segmentation.py
_dev/_old/_plate_viewer/_plot_methods/: _main_plot.py  _main_plot_with_sqlmodel.py
_dev/learn/: check_analysis_results.py  check_db.py  create.py  filter.py  read.py
_slqmodel/: IMPLEMENTATION_SUMMARY.md  README.md  README_SQLMODEL.md  SCHEMA_DIAGRAM.md  SQLMODEL_GUIDE.md  database_1762296011.db  database_1762296015.db  examples_sqlmodel_usage.py  migrate_json_to_db.py  models.py  test.py  test_1.py  test_relationships.db  test_relationships.py  visualize_experiment.py  x.py
_to_do/: test_burst_plots.py  wip_batch_analysis.py
_todo/: wip_batch_analysis.py
analysis_results/: cali_cp.db  evoked_experiment.db
src/cali/: __init__.py  __main__.py  _constants.py  _util.py  runner.py
src/cali/_batch_cellpose/: _batch_segmentation_multiprocessing.py
src/cali/_old/_plate_viewer/: _analysis_old.py  _analysis_with_sqlmodel.py  _graph_widgets.py  _plate_viewer_with_sqlmodel.py  _segmentation.py  _to_csv.py  _util.py
src/cali/_plate_viewer/: __init__.py  _analysis.py  _analysis_gui.py  _analysis_new.py  _analysis_old.py  _analysis_with_sqlmodel.py  _graph_widgets.py  _plate_map.py  _plate_plan_wizard.py  _plate_viewer.py  _plate_viewer_with_sqlmodel.py  _segmentation.py  _to_csv.py  _util.py
src/cali/_plate_viewer/_logger/: _pv_logger.py
src/cali/_plate_viewer/_plot_methods/: _main_plot.py  _main_plot_with_sqlmodel.py
src/cali/_readers/: _ome_zarr_reader.py
src/cali/analysis/: __init__.py  _analysis_runner.py  _analysis_runner2.py  _analysis_with_sqlmodel.py  _oasis_suite2p.py  _util.py
src/cali/cali_logger/: __init__.py
src/cali/detection/: __init__.py  _detection_runner.py  _segmentation.py
src/cali/detection/_batch_cellpose/: __init__.py
src/cali/gui/: __init__.py  _analysis_gui.py  _cali_gui.py  _cali_gui_old.py  _detection_gui.py  _graph_widgets.py  _image_viewer.py  _init_dialog.py  _plate_map.py  _runs_panel.py  _util.py
src/cali/logger/: __init__.py
src/cali/plate_viewer/: __init__.py
src/cali/plot/: __init__.py  _main_plot.py  _main_plot_old.py  _util.py
src/cali/plot/_single_wells_plots/: _plolt_evoked_experiment_data_plots.py  _plot_calcium_amplitudes_and_frequencies_data.py  _plot_calcium_network_connectivity.py  _plot_calcium_peaks_correlation.py  _plot_calcium_peaks_iei_data.py  _plot_calcium_peaks_raster_plots.py  _plot_calcium_peaks_synchrony.py  _plot_calcium_peaks_synchrony_plv.py  _plot_calcium_traces_data.py  _plot_cell_size.py  _plot_inferred_spike_burst_activity.py  _plot_inferred_spike_correlation.py  _plot_inferred_spike_raster_plots.py  _plot_inferred_spike_synchrony.py  _plot_inferred_spikes.py  _plot_neuropil_traces.py  _plot_neuropil_visualization.py
src/cali/readers/: _ome_zarr_reader.py  _tensorstore_zarr_reader.py
src/cali/segmentation/: __init__.py  _segmentation.py
src/cali/segmentation/_batch_cellpose/: __init__.py  _batch_segmentation_multiprocessing.py
src/cali/sqlmodel/: __init__.py  _data_to_plate.py  _db_to_plate_map.py  _db_to_useq_plate.py  _json_to_db.py  _model.py  _model_graph.py  _models.py  _query_examples.py  _useq_plate_to_db.py  _util.py  _visualize_experiment.py
src/cali/sqlmodel/examples/: example_create_experiment.py  (+9 more)
src/cali/util/: __init__.py  _to_csv.py  _util.py
tests/: conftest.py  test_basic.py  test_gui.py  test_results.py  test_sqlmodel.py
(+63 files in other folders)
